--- a/blog/.eslintrc.json
+++ b/blog/.eslintrc.json
@@ -14,7 +14,9 @@
 		"ecmaVersion": "latest",
 		"sourceType": "module"
 	},
-	"plugins": ["@typescript-eslint"],
+	"plugins": [
+		"@typescript-eslint"
+	],
 	"rules": {
 		"react/react-in-jsx-scope": "off",
 		"react/jsx-uses-react": "off",
