--- a/blog/.eslintrc.json
+++ b/blog/.eslintrc.json
@@ -1,42 +1,43 @@
 {
-	"env": {
-		"browser": true,
-		"es2021": true
-	},
-	"extends": [
-		"standard-with-typescript",
-		"plugin:react/recommended",
-		"prettier",
-		"plugin:storybook/recommended"
-	],
-	"parserOptions": {
-		"project": "tsconfig.json",
-		"ecmaVersion": "latest",
-		"sourceType": "module"
-	},
-	"plugins": [
-		"@typescript-eslint"
-	],
-	"rules": {
-		"react/react-in-jsx-scope": "off",
-		"react/jsx-uses-react": "off",
-		"react/self-closing-comp": [
-			"error",
-			{
-				"component": true,
-				"html": true
-			}
-		],
-		"@typescript-eslint/no-misused-promises": [
-			"error",
-			{
-				"checksVoidReturn": false
-			}
-		]
-	},
-	"settings": {
-		"react": {
-			"version": "detect"
-		}
-	}
+ "env": {
+  "browser": true,
+  "es2021": true
+ },
+ "extends": [
+  "standard-with-typescript",
+  "plugin:react/recommended",
+  "prettier",
+  "plugin:storybook/recommended",
+  "plugin:storybook/recommended"
+ ],
+ "parserOptions": {
+  "project": "tsconfig.json",
+  "ecmaVersion": "latest",
+  "sourceType": "module"
+ },
+ "plugins": [
+  "@typescript-eslint"
+ ],
+ "rules": {
+  "react/react-in-jsx-scope": "off",
+  "react/jsx-uses-react": "off",
+  "react/self-closing-comp": [
+   "error",
+   {
+    "component": true,
+    "html": true
+   }
+  ],
+  "@typescript-eslint/no-misused-promises": [
+   "error",
+   {
+    "checksVoidReturn": false
+   }
+  ]
+ },
+ "settings": {
+  "react": {
+   "version": "detect"
+  }
+ }
 }
