--- a/blog/package.json
+++ b/blog/package.json
@@ -12,6 +12,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "@govbr-ds/core": "^3.5.1",
     "axios": "^1.6.8",
     "react": "^18.2.0",
