--- a/blog/package.json
+++ b/blog/package.json
@@ -14,11 +14,14 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@govbr-ds/core": "^3.5.1",
+    "@hookform/resolvers": "^3.3.4",
     "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.4",
     "react-router-dom": "^6.23.0",
-    "storybook": "^8.0.10"
+    "storybook": "^8.0.10",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "1.3.3",
